--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                 </div>
                 
                 <div class="gallery-item" data-category="classroom">
-                    <img src="/classrooms.jpg" alt="Interactive classroom session">
+                    <img src="classrooms.jpg" alt="Interactive classroom session">
                     <div class="gallery-overlay">
                         <i class="fas fa-expand"></i>
                     </div>
